fixed react problem and removed gap in grid

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,6 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -39,7 +38,6 @@
 
 .app-grid {
   display: grid;
-  gap: 1rem;
   grid-template-columns: repeat(8, auto);
 }
 
@@ -60,7 +58,7 @@
 
 .home {
   grid-column: 5/auto;
-  grid-row: 3;
+  grid-row: 3/4;
 }
 
 .title {
